# cli-setup

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
py/: clap-rs.py
src/: lib.rs
