[package]
name = "cli-setup"
version = "0.2.3"
authors = ["Vanessa McHale <vamchale@gmail.com>"]
exclude = [ ".gitignore" ]
license-file = "LICENSE"
readme = "README.md"
description = "Helper functions for installing manpages alongside a command-line tool."

[dependencies]
colored = "1.6.0"
dirs = "1.0"
